# NexusRealm

./: bun.lockb  package.json  tailwind.config.js
src/: App.vue  index.css  main.ts
src-tauri/: Cargo.toml  settings.yaml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  tray.rs
src-tauri/src/api/: mod.rs  model_api.rs  settings_api.rs  system_api.rs
src-tauri/src/constants/: mod.rs
src-tauri/src/models/: messaging.rs  mod.rs  settings.rs
src-tauri/src/modules/: app_settings.rs
src/assets/styles/: index.scss  markdown.scss
src/components/: Button.vue  CommandPalette.vue  MessageBox.vue  ModelSelector.vue  NotificationHandler.vue  QueryInput.vue
src/components/elements/: Button.vue  DropdownSelector.vue  InputWithLabel.vue  MarkdownText.vue  Sidebar.vue  Spinner.vue  Toast.vue
src/components/settings/: dropdownGroup.vue
src/constants/: models.ts
src/lib/: appNotifications.ts  shortcuts.ts
src/lib/api/: messaging.ts
src/lib/realms/: ai.ts  realm.ts  web.ts
src/routers/: main.ts
src/stores/: appStateStore.ts  commandStore.ts  messageStore.ts  modelStore.ts  notificationStore.ts  settingsStore.ts
src/stores/realms/: aiRealmStore.ts  nexusRealmStore.ts
src/types/: app.ts  command.ts  incantation.ts  messaging.ts  settings.ts
src/views/: AgentsView.vue  AiRealm.vue  HomeView.vue  NexusRealm.vue  Sandbox.vue  Settings.vue  SettingsView.vue  WebView.vue
