[package]
name = "small-ai-manager"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-close", "window-set-title", "window-set-fullscreen", "window-set-focus", "window-minimize", "window-print", "window-set-size", "window-maximize", "window-create", "path-all", "fs-all", "clipboard-all", "global-shortcut-all", "macos-private-api", "shell-open", "system-tray", "window-center", "window-hide", "window-show"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.11"
chrono = {version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tauri-cli = "1.6.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
